<resources>
    <string name="app_name">Приз.укр</string>
    <string name="prize_image">Малюнок</string>
    <string name="prize_url">"https://приз.укр/image/%1$d/$%2$d?w=300&amp;h=300"</string>
    <string name="x">XXXX</string>

    <!--register_card-->
    <string name="btn_register">Зареєструвати</string>
    <string name="register_message">Введіть номер карточки, щоб зареєструвати її</string>

    <!--checked_card_strings-->
    <string name="msg_already_registered">Номер вже зареєстровано.</string>
    <string name="msg_prize">Ваш приз</string>
    <string name="btn_add">В скарбничку</string>
    <string name="btn_register_new">Це моя перша картка</string>
    <string name="msg_add_card">Вкажіть номер вашої скарбнички</string>
    <string name="btn_back">&lt;&lt; Назад</string>
    <string name="btn_done">Готово</string>
    <string name="star">star</string>

    <!--prize_details-->
    <string name="title_characteristic">Характеристика</string>
    <string name="title_description">Опис</string>
    <string name="btn_participate">Взяти участь</string>

    <!-- participation_dialog-->
    <string name="msg_star_remove">З вашої скарбнички буде використано</string>
    <string name="msg_participants">або тоді коли до акції приєднаються ще %1$d %2$s</string>
    <string name="msg_action_date"><![CDATA[Розіграш розпочнеться <font color="#ff0000">%1$s р.</font>]]></string>
    <string name="msg_agreement"><![CDATA[<u>Я ознайомився з умовами акції</u>]]></string>

    <!--bottom_menu-->
    <string name="bottom_menu_item_main">Головна</string>
    <string name="bottom_menu_item_my_office">Мій кабінет</string>
    <string name="bottom_menu_item_my_action">Мої акції</string>

    <!-- main_toolbar-->
    <string name="msgs">msgs</string>
    <string name="star_img">star</string>

    <!--my_office_strings-->
    <string name="my_office">Мій кабінет</string>
    <string name="second_name">Прізвище</string>
    <string name="first_name">Ім\'я</string>
    <string name="middle_name">По батькові</string>
    <string name="e_mail">E-mail</string>
    <string name="tel">Номер телефону*</string>
    <string name="personal_data">Персональні Дані</string>
    <string name="btn_apply">Застосувати</string>
    <string name="access">Режим доступу</string>
    <string name="txt_use_card">Використовувати картку:</string>
    <string name="txt_use_tel">Використовувати номер телефону та пароль для доступу до скарбнички</string>
    <string name="advice_1"><b>Поточний режим доступу:</b>\n Для доступу до скарбнички використовується картка Приз.укр із вашим фартовим номером</string>
    <string name="advice_2"><b>Порада:</b>\nЗаповніть персональні дані, щоб використати номер телефону та пароль для доступу до скарбнички.</string>
    <string name="txt_new_pass">Задайте новий пароль</string>
    <string name="txt_cont_pass">Введіть новий пароль повторно</string>

    <!--menu_main-->
    <string name="login">Вхід</string>
    <string name="exit">Вихід</string>
    <string name="my_prizes">Мої призи</string>
    <string name="how_to_win_prize">Як виграти приз</string>
    <string name="action_conditions">Умови акції</string>
    <string name="questions_and_answers">Питання та відповіді</string>
    <string name="feedback">Зворотній звязок</string>

    <!--error-->
    <string name="error_card_already_logged">Картку вже зареєстровано.</string>
    <string name="error_unsuccessful_attempt">Невдала спроба.</string>
    <string name="error_do_not_found">Невірний номер. Перевірте усі цифри.</string>
    <string name="error_blocked">Картки не знайдено. Спробуйте пізніше.</string>

    <!--login_activity-->
    <string name="tel_entrance">Вхід за допомогою телефону</string>
    <string name="card_entrance">Вхід за допомогою картки</string>

    <!-- confirm_code_dialog -->
    <string name="confirm_code">Код підтвердження</string>
    <string name="btn_confirm">Підтвердити</string>
    <string name="btn_cancel">Відміна</string>

    <!-- my_actions_fragment-->
    <string name="my_actions">Мої акції</string>


</resources>
