<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:id="@+id/common_items">

        <item android:id="@+id/login"
            android:title="@string/login"/>

        <item
            android:id="@+id/win_prize"
            android:title="@string/how_to_win_prize" />
        <item
            android:id="@+id/actions_conditions"
            android:title="@string/action_conditions" />
        <item
            android:id="@+id/question_answers"
            android:title="@string/questions_and_answers" />
        <item
            android:id="@+id/feedback"
            android:title="@string/feedback" />
        <item
            android:id="@+id/exit"
            android:title="@string/exit"
            android:visible="false"/>
    </group>
</menu>