<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/AppTheme.Toolbar">

        <ImageView
            android:id="@+id/img_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="12dp"
            android:background="@drawable/star_toolbar"
            android:contentDescription="@string/star_img"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/tv_stars"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_margin="6dp"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/messages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_marginTop="21dp"
            android:visibility="invisible"
            android:layout_marginEnd="8dp"
            android:background="@drawable/message_icon_fill"
            android:contentDescription="@string/msgs" />
    </android.support.v7.widget.Toolbar>

    <View
        android:id="@+id/toolbar_shadow"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@drawable/toolbar_shadow" />

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ua.com.info.prize.PrizesView
            android:id="@+id/prize_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp" />


        <TextView
            android:id="@+id/error"
            style="@style/Error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_gravity="bottom|center"
            android:layout_margin="16dp"
            android:background="@drawable/border_floating_button"
            android:drawableStart="@drawable/logo"
            android:drawablePadding="4dp"
            android:elevation="2dp"
            android:padding="18dp"
            android:text="@string/btn_register"
            android:textColor="@color/white" />

    </FrameLayout>
</LinearLayout>
