<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyOfficeActivity">

    <ua.com.info.prize.UserDataScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/my_office_accent_color"
                android:elevation="2dp"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/personal_data"
                android:textSize="25sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:background="@drawable/border_msg"
                    android:gravity="center_horizontal"
                    android:padding="8dp"
                    android:layout_margin="8dp"
                    android:text="Поточний режим доступу:\nДля доступу до скарбнички використовується картка Приз.укр із вашим фартовим номером"
                    android:textSize="15sp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_fName"
                    style="@style/UserData"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/second_name"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_sName"
                    style="@style/UserData"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/first_name" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_mName"
                    style="@style/UserData"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/middle_name" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_mail"
                    style="@style/UserData"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/e_mail"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_tel"
                    style="@style/UserData"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tel"
                    android:inputType="numberSigned" />
            </android.support.design.widget.TextInputLayout>


            <!--<LinearLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="match_parent"-->
                <!--android:orientation="horizontal"-->
                <!--android:gravity="center_horizontal">-->
                <!--<Button-->
                    <!--android:layout_width="150dp"-->
                    <!--android:text="write"-->
                    <!--android:id="@+id/btn_write"-->
                    <!--android:layout_height="wrap_content" />-->
                <!--<Button-->
                    <!--android:layout_width="150dp"-->
                    <!--android:text="read"-->
                    <!--android:id="@+id/btn_read"-->
                    <!--android:layout_height="wrap_content" />-->

            <!--</LinearLayout>-->

            <Button
                android:id="@+id/btn_apply_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="14dp"
                style="@style/ButtonStyle"
                android:text="@string/btn_apply" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/my_office_accent_color"
                android:elevation="1dp"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/access"
                android:textSize="25sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="8dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingEnd="14dp"
                    android:paddingStart="20dp"
                    android:text="Використовувати картку:"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            </LinearLayout>

            <ua.com.info.prize.NumberFields
                android:id="@+id/number_fields"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="14dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_tel"
                    android:layout_width="wrap_content"
                    android:enabled="false"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="Використовувати номер телефону  та пароль для доступу до скарбнички"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
            </LinearLayout>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:background="@drawable/border_msg"
                    android:gravity="center_horizontal"
                    android:padding="8dp"
                    android:layout_margin="8dp"
                    android:text="Порада:\nЗаповніть персональні дані, щоб використати номер телефону та пароль для доступу до скарбнички."
                    android:textSize="15sp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:orientation="vertical"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_new_pass"
                    style="@style/UserData"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:hint="Задайте новий пароль"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:orientation="vertical">

                    <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_rep_pass"
                    style="@style/UserData"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:hint="Введіть новий пароль повторно"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_apply_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="14dp"
                android:enabled="false"
                android:text="@string/btn_apply"
                style="@style/ButtonStyle"/>

        </LinearLayout>

    </ua.com.info.prize.UserDataScrollView>

</android.support.constraint.ConstraintLayout>